--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 appdirs==1.4.0
+awscli==1.16.98
 boto3==1.4.4
-botocore==1.5.14
+botocore==1.12.88
+colorama==0.3.9
 docutils==0.13.1
 futures==3.0.5
 jmespath==0.9.1
 packaging==16.8
 py2neo==3.1.2
+pyasn1==0.4.5
 pyparsing==2.1.10
 python-dateutil==2.6.0
-s3transfer==0.1.10
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.1.13
 six==1.10.0
+urllib3==1.24.1
